--- a/style.css
+++ b/style.css
@@ -12,12 +12,17 @@ table{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 103px;
+    font-size: 90px;
     color:aliceblue;
-    align-content: center;
-}
-#summonRank_data_Snowsayshi{
-    color: aliceblue;
+    align-content: space-evenly;
 }
 
+a{
+    text-decoration: none;
+    color:aliceblue;
+}
+
+a:hover{
+    color: aqua;
+}
 
